# imdb-crawler

./: MovieDB.sql  setup.py
corto/: Readme  crawler.sh  db2scm.pl  stop.sh
into-build/: load.scm  movie-query.scm  restapi.scm
moviedb/: CMakeLists.txt  atom_types.script  atom_types_init.cc
moviedb/scm/: CMakeLists.txt  moviedb.scm
